# OpenDCL

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMAKE.md  CMakeLists.txt  CMakePresets.json  MakeDEU.bat  ObjectDCL.sln  OpenDCL.sln  README.md  bugs.txt  prepareForSourceForge-NoBuild.bat  prepareForSourceForge.DR.bat  prepareForSourceForge.bat
Runtime/Localized/: CMakeLists.txt
Runtime/Localized/CHS/Runtime.Res/: Runtime.CHS.rc  Runtime.Res.CHS.vcxproj  Runtime.Res.CHS.vcxproj.filters
Runtime/Localized/CHT/Runtime.Res/: Runtime.CHT.rc  Runtime.Res.CHT.vcxproj  Runtime.Res.CHT.vcxproj.filters
Runtime/Localized/DEU/Content/: License.txt
Runtime/Localized/DEU/Runtime.Res/: Runtime.DEU.rc  Runtime.Res.DEU.vcxproj
Runtime/Localized/ENU/Runtime.Res/: Runtime.ENU.rc  Runtime.Res.ENU.vcxproj  Runtime.Res.ENU.vcxproj.filters
Runtime/Localized/ESM/Content/: License.txt
Runtime/Localized/ESM/Runtime.Res/: Runtime.ESM.rc
Runtime/Localized/FRA/Runtime.Res/: Runtime.FRA.rc
Runtime/Localized/RUS/Runtime.Res/: Runtime.RUS.rc  Runtime.Res.RUS.vcxproj.filters
Runtime/RxInstall/: CMakeLists.txt  RegIO.cpp  RegIO.h  RxInstall.cpp  RxInstall.rc  RxInstall.vcproj  RxInstall.vcxproj  RxInstall.vcxproj.filters  stdafx.cpp  stdafx.h
Studio/: 3DRect.cpp  3DRect.h  AcadColorEdit.cpp  AcadColorEdit.h  BuildCHM.bat  BuildCHM.mak  ButtonStyles.cpp  ButtonStyles.h  CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  ChmLib.cpp  ChmLib.h  ColorEdit.cpp  ColorEdit.h  ColorListBox.cpp  ColorListBox.h  ColorPatch.cpp  ColorPickerCB.cpp  ColorPickerCB.h  Colors.cpp  Colors.h  ColorsPage.cpp  ColorsPage.h  ColourPicker.cpp  ColourPicker.h  ColourPopup.cpp  ColourPopup.h  ColumnsPage.cpp  ColumnsPage.h  ComboBoxPage.cpp  ComboBoxPage.h  ControlBrowser - Copy.cpp  ControlBrowser.cpp  ControlBrowser.h  ControlDropSource.cpp  ControlDropSource.h  ControlDropTarget.cpp  ControlDropTarget.h  ControlGripper.cpp  (+182 more)
Studio/CHS/: HTMLHelp.CHS.vcproj  HTMLHelp.CHS.vcxproj  Studio.CHS.vdproj
Studio/CHS/Content/: @Template.htm  BlockView.mth  ComboBox.mth  FileDlgCtrl.mth  Forms.mth  Index.htm  License.htm  License.txt  OpenDCL.chm  OpenDCL.hhc  OpenDCL.hhp  PictureBox.mth  TabStrip.mth  TextBox.mth
Studio/CHS/Content/Advanced/: Deployment.htm  Tips.htm
Studio/CHS/Content/Concepts/: Development.htm  Index.htm  Modality.htm  ObjectModel.htm
Studio/CHS/Content/Intro/: Glossary.htm  Index.htm  (+2 more)
Studio/CHS/Studio.Res/: Studio.CHS.rc  Studio.Res.CHS.vcproj  Studio.Res.CHS.vcxproj  Studio.Res.CHS.vcxproj.filters
Studio/DEU/: HTMLHelp.DEU.vcproj  HTMLHelp.DEU.vcxproj  HTMLHelp.DEU.vcxproj.filters  Setup.reg  Studio.DEU.vdproj
Studio/DEU/Content/: @Template.htm  AllCtrls.mth  Animation.mth  AnimationCtrl.mth  AxControl.mth  AxCtrls.mth  AxObject.mth  AxObjects.mth  BlockList.mth  BlockView.mth  Calendar.mth  ComboBox.mth  Control.mth  DwgList.mth  DwgPreview.mth  FileExplorer.mth  Forms.mth  GraphicButton.mth  Grid.mth  GrphicBtn.mth  Hatch.mth  Html.mth  ImageComboBox.mth  Index.htm  License.htm  License.txt  ListBox.mth  ListView.mth  Month.mth  OpenDCL.chm  OpenDCL.hhc  OpenDCL.hhp  OptionList.mth  PictureBox.mth  SlideView.mth  Tab.mth  TextBox.mth  TreeCtrl.mth  WinHelp.css
Studio/DEU/Studio.Res/: Studio.DEU.rc  Studio.Res.DEU.vcproj  Studio.Res.DEU.vcxproj  Studio.Res.DEU.vcxproj.filters
Studio/ENU/: HTMLHelp.ENU.vcproj  HTMLHelp.ENU.vcxproj  Setup.reg  Studio.ENU.vdproj
Studio/ENU/Content/: @Template.htm  AllCtrls.mth  AnimationCtrl.mth  AxControl.mth  AxCtrls.mth  AxObjects.mth  BlockList.mth  BlockView.mth  ComboBox.mth  DwgList.mth  DwgPreview.mth  FileDlgCtrl.mth  Forms.mth  Grid.mth  GrphicBtn.mth  Hatch.mth  Html.mth  ImageComboBox.mth  ImageTree.mth  Index.htm  License.htm  License.txt  ListBox.mth  ListCtrl.mth  ListView.mth  Month.mth  OpenDCL.chm  OpenDCL.hhc  OpenDCL.hhp  OptionList.mth  PictureBox.mth  SlideView.mth  Tab.mth  TextBox.mth  TreeCtrl.mth  Utility.js
Studio/ENU/Studio.Res/: Studio.ENU.rc  Studio.Res.ENU.vcproj  Studio.Res.ENU.vcxproj  Studio.Res.ENU.vcxproj.filters
Studio/ESM/: HTMLHelp.ESM.vcproj  HTMLHelp.ESM.vcxproj  Studio.ESM.vdproj
Studio/ESM/Content/: @Template.htm  AnimationCtrl.mth  BlockList.mth  ComboBox.mth  Control.mth  DwgList.mth  Grid.mth  Html.mth  Index.htm  License.htm  ListBox.mth  ListView.mth  OpenDCL.chm  OpenDCL.hhc  OpenDCL.hhp  ProjectStructure.dia  SlideView.mth  Template.htm  WinHelp.css
Studio/ESM/Studio.Res/: Studio.ESM.rc  Studio.Res.ESM.vcproj  Studio.Res.ESM.vcxproj  Studio.Res.ESM.vcxproj.filters
Studio/FRA/: HTMLHelp.FRA.vcproj  HTMLHelp.FRA.vcxproj  Setup.reg  Studio.FRA.vdproj
Studio/FRA/Content/: @Template.htm  AnimationCtrl.mth  AxCtrls.mth  AxObject.mth  BlockList.mth  BlockView.mth  Calendar.mth  DwgPreview.mth  Forms.mth  Grid.mth  Html.mth  Index.htm  License.htm  License.txt  OpenDCL.chm  OpenDCL.hhc  OpenDCL.hhp  PictureBox.mth  SlideView.mth  TextBox.mth
Studio/FRA/Studio.Res/: Studio.FRA.rc  Studio.Res.FRA.vcproj  Studio.Res.FRA.vcxproj  Studio.Res.FRA.vcxproj.filters
Studio/Localized/: BuildCHM.bat  BuildCHM.mak  MSIPostBuild.bat
Studio/Localized/CHS/: Package.wxl  Setup.reg  Studio.CHS.vdproj
Studio/Localized/CHT/: HTMLHelp.CHT.vcxproj  Package.wxl  Setup.reg  Studio.CHT.vdproj
Studio/Localized/DEU/: Package.wxl  Studio.DEU.vdproj
Studio/Localized/ENU/: Package.wxl  Studio.ENU.vdproj
Studio/Localized/ESM/: Package.wxl  Setup.reg  Studio.ESM.vdproj
Studio/Localized/FRA/: HTMLHelp.FRA.vcxproj  Package.wxl  Studio.FRA.vdproj
Studio/Localized/RUS/: HTMLHelp.RUS.vcxproj  Package.wxl  Studio.RUS.vdproj
Studio/RUS/: HTMLHelp.RUS.vcproj  HTMLHelp.RUS.vcxproj  Setup.reg  Studio.RUS.vdproj
Studio/RUS/Content/: @Template.htm  AxObjects.mth  Grid.mth  GrphicBtn.mth  Hatch.mth  ImageComboBox.mth  Index.htm  License.htm  License.txt  ListBox.mth  Month.mth  OpenDCL.chm  OpenDCL.hhc  OpenDCL.hhp  Tab.mth  WinHelp.css
Studio/RUS/Studio.Res/: Studio.RUS.rc  Studio.Res.RUS.vcproj  Studio.Res.RUS.vcxproj  Studio.Res.RUS.vcxproj.filters
Studio/Res/: COORDCUR.CUR  OpenDCL Studio.exe.manifest
(+9870 files in other folders)
